name:     rapid
version:  0.1.3
category: Development
synopsis: Rapid prototyping with GHCi: hot reloading of running components and reload-surviving values

maintainer:   Ertugrul Söylemez <esz@posteo.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2016 Ertugrul Söylemez
homepage:     https://github.com/esoeylemez/rapid
bug-reports:  https://github.com/esoeylemez/rapid/issues
license:      BSD3
license-file: LICENSE

description:  This package provides a rapid prototyping suite for GHCi
    that can be used standalone or integrated into editors.  You can
    hot-reload individual running components as you make changes to
    their code.  It is designed to shorten the development cycle during
    the development of long-running programs like servers, web
    applications and interactive user interfaces.
    .
    It can also be used in the context of batch-style programs:  Keep
    resources that are expensive to create in memory and reuse them
    across module reloads instead of reloading/recomputing them after
    every code change.
    .
    Technically this package is a safe and convenient wrapper around
    <https://hackage.haskell.org/package/foreign-store foreign-store>.

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: CHANGELOG.md README.md

source-repository head
    type:     git
    location: https://github.com/esoeylemez/rapid.git


library
    build-depends:
        async               >= 2.1 && < 3,
        base                >= 4.8 && < 5,
        containers          >= 0.5 && < 1,
        foreign-store       >= 0.2 && < 1,
        stm                 >= 2.4 && < 3
    default-language: Haskell2010
    ghc-options: -W -fdefer-typed-holes
    exposed-modules:
        Rapid
