name:     SKELETON
version:  0.1.0
category: 
synopsis: 

maintainer:   Ertugrul Söylemez <esz@posteo.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2016 Ertugrul Söylemez
homepage:     https://github.com/esoeylemez/SKELETON
bug-reports:  https://github.com/esoeylemez/SKELETON/issues
license:      BSD3
license-file: LICENSE

description: 

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/esoeylemez/SKELETON.git

flag Devel
    default: False
    description: Development dependencies
    manual: True

flag Examples
    default: False
    description: Build the example programs
    manual: True


library
    build-depends:
        base                >= 4.8 && < 5
    if flag(devel)
        build-depends: rapid
    default-language: Haskell2010
    ghc-options: -W -fdefer-typed-holes
    exposed-modules:

executable SKELETON
    build-depends:
        base                >= 4.8  && < 5,
        SKELETON
    default-language: Haskell2010
    ghc-options: -W -threaded -fdefer-typed-holes
    hs-source-dirs: programs
    main-is: SKELETON.hs

executable SKELETON-experiment
    if flag(examples)
        build-depends:
            base >= 4.8 && < 5,
            SKELETON
    else
        buildable: False
    default-language: Haskell2010
    ghc-options: -threaded -fdefer-typed-holes
    hs-source-dirs: examples
    main-is: experiment.hs

test-suite tests
    type: exitcode-stdio-1.0
    build-depends:
        base                >= 4.8 && < 5,
        smallcheck,
        tasty,
        tasty-smallcheck,
        SKELETON
    default-language: Haskell2010
    ghc-options: -W -threaded -with-rtsopts=-N -fdefer-typed-holes
    hs-source-dirs: tests
    main-is: Props.hs
